Working on the st up

--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Etsy Items</title>
+  <title>Assignment 8 - Etsy Items</title>
+  <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  
 </head>
+
 <body>
+  <div class="container">
+
+    <header>
+      <nav>
+        <ul>
+          <li>Etsy Items</li>
+        </ul>
+      </nav>
+
+      <p class="banner">
+        <img src="images/banner.jpg">
+      </p>
+    </header>
 
 
-<p id="answer1"></p>
+      <p id="answer1"></p>
 
+
+
+
+
+
+
+
+  </div>
 
 <script src="js/items.js"></script>
 <script src="js/main.js"></script>
