--- a/index.html
+++ b/index.html
@@ -12,17 +12,63 @@
     <header>
       <nav>
         <ul>
-          <li>Etsy Items</li>
+          <li>
+          <h3>Etsy Items</h3>
+          </li>
         </ul>
       </nav>
 
-      <p class="banner">
-        <img src="images/banner.jpg">
-      </p>
+      <div class="banner">
+        <img src="css/tracks.jpg">
+      </div>
     </header>
 
+    <div class="main">
 
-      <p id="answer1"></p>
+      <div class="box">
+        <h1>Answer 1</h1>
+        <br><br>
+        <p id="answer1"></p>
+      </div>
+
+      <div class="box">
+        <h1>Answer 2</h1>
+        <br><br>
+        <p id="answer2"></p>
+      </div>
+
+      <div class="box">
+        <h1>Answer 3</h1>
+        <br><br>
+        <p id="answer3"></p>
+      </div>
+
+      <div class="box">
+        <h1>Answer 4</h1>
+        <br><br>
+        <p id="answer4"></p>
+      </div>
+
+      <div class="box">
+        <h1>Answer 5</h1>
+        <br><br>
+        <p id="answer5"></p>
+      </div>
+
+      <div class="box">
+        <h1>Answer 6</h1>
+        <br><br>
+        <p id="answer6"></p>
+      </div>
+    </div>
+
+    <footer>
+      <div class="footer">
+          <p>2015 Hadiya Hope-Crichlow</p>
+      </div>
+    </footer>
+
+
 
 
 
