--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Assignment 8 - Etsy Items</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link href='https://fonts.googleapis.com/css?family=Slabo+27px|Roboto+Slab|Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -10,72 +12,63 @@
   <div class="container">
 
     <header>
-      <nav>
-        <ul>
-          <li>
-          <h3>Etsy Items</h3>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li>
+            <h3>Etsy Items</h3>
+            </li>
+          </ul>
+        </nav>
 
-      <div class="banner">
-        <img src="css/tracks.jpg">
-      </div>
+        <div class="banner">
+          <img src="css/tracks.jpg">
+        </div>
     </header>
 
     <div class="main">
+        <div class="box">
+          <h1>Answer 1</h1>
+          <br><br>
+          <p id="answer1"></p>
+        </div>
 
-      <div class="box">
-        <h1>Answer 1</h1>
-        <br><br>
-        <p id="answer1"></p>
-      </div>
+        <div class="box">
+          <h1>Answer 2</h1>
+          <br><br>
+          <p id="answer2"></p>
+        </div>
 
-      <div class="box">
-        <h1>Answer 2</h1>
-        <br><br>
-        <p id="answer2"></p>
-      </div>
+        <div class="box">
+          <h1>Answer 3</h1>
+          <br><br>
+          <p id="answer3"></p>
+        </div>
 
-      <div class="box">
-        <h1>Answer 3</h1>
-        <br><br>
-        <p id="answer3"></p>
-      </div>
+        <div class="box">
+          <h1>Answer 4</h1>
+          <br><br>
+          <p id="answer4"></p>
+        </div>
 
-      <div class="box">
-        <h1>Answer 4</h1>
-        <br><br>
-        <p id="answer4"></p>
-      </div>
+        <div class="box">
+          <h1>Answer 5</h1>
+          <br><br>
+          <p id="answer5"></p>
+        </div>
 
-      <div class="box">
-        <h1>Answer 5</h1>
-        <br><br>
-        <p id="answer5"></p>
-      </div>
-
-      <div class="box">
-        <h1>Answer 6</h1>
-        <br><br>
-        <p id="answer6"></p>
-      </div>
+        <div class="box">
+          <h1>Answer 6</h1>
+          <br><br>
+          <p id="answer6"></p>
+        </div>
     </div>
 
     <footer>
-      <div class="footer">
-          <p>2015 Hadiya Hope-Crichlow</p>
-      </div>
+        <div class="footer">
+        <!-- fix symbol -->
+            <p> © 2015 Hadiya Hope-Crichlow</p>
+        </div>
     </footer>
-
-
-
-
-
-
-
-
-
 
   </div>
 
@@ -83,4 +76,5 @@
 <script src="js/main.js"></script>
 
 </body>
+
 </html>
