--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <footer>
         <div class="footer">
         <!-- fix symbol -->
-            <p> © 2015 Hadiya Hope-Crichlow</p>
+            <p>@copy; 2015 Hadiya Hope-Crichlow</p>
         </div>
     </footer>
 
