Working on wood

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div class="box">
           <h1>Answer 2</h1>
           <br><br>
-          <p id="answer2"></p>
+          <p id="answer2First"></p>
+          <p id="answer2Second"></p>
+          <p id="answer2Third"></p>
         </div>
 
         <div class="box">
