Working on five

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         <div class="box">
           <h1>Answer 4</h1>
           <br><br>
-          <p id="answer4"></p>
+          <p id="answer4First"></p>
+          <p id="answer4Second"></p>
+          <p id="answer4Third"></p>
+          <p id="answer4Fourth"></p>
+          <p id="answer4Fifth"></p>
         </div>
 
         <div class="box">
@@ -68,7 +72,7 @@
     <footer>
         <div class="footer">
         <!-- fix symbol -->
-            <p>@copy; 2015 Hadiya Hope-Crichlow</p>
+            <p>&copy; 2015 Hadiya Hope-Crichlow</p>
         </div>
     </footer>
 
