--- a/index.html
+++ b/index.html
@@ -59,7 +59,31 @@
         <div class="box">
           <h1>Answer 5</h1>
           <br><br>
-          <p id="answer5"></p>
+          <p id="answer5First"></p>
+          <p id="answer5m1"></p>
+          <p id="answer5m2"></p>
+          <p id="answer5m3"></p>
+          <p id="answer5m4"></p>
+          <p id="answer5m5"></p>
+          <p id="answer5m6"></p>
+          <p id="answer5m7"></p>
+          <p id="answer5m8"></p>
+          <p id="answer5m9"></p>
+          <br>
+          <p id="answer5Second"></p>
+          <p id="answer5m10"></p>
+          <p id="answer5m11"></p>
+          <p id="answer5m12"></p>
+          <p id="answer5m13"></p>
+          <p id="answer5m14"></p>
+          <p id="answer5m15"></p>
+          <p id="answer5m16"></p>
+          <p id="answer5m17"></p>
+          <p id="answer5m18"></p>
+          <p id="answer5m19"></p>
+          <p id="answer5m20"></p>
+          <p id="answer5m21"></p>
+          <p id="answer5m922"></p>
         </div>
 
         <div class="box">
